--- a/Server/website/index.html
+++ b/Server/website/index.html
@@ -4,9 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Family Parking</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="keywords" content="some keywords that best describe your business">
-	<meta name="description" content="a short description of your company">
-	<meta name="author" content="Be Back">
+	<meta name="keywords" content="park family app android google workshop">
+	<meta name="author" content="Family Parking">
 
 	<!-- Mobile Specific Metas
 	================================================== -->
@@ -41,9 +40,9 @@
 				<h1>Contact us</h1>
 			</div>
 			<div class="col-xs-12 col-sm-6 contact-details text-right">
-				<iframe src="http://maps.google.com/maps?f=q&t=m&z=15&ll=-7.269152,112.733127&output=embed" width="100%" height="185" frameborder="0" style="border:0"></iframe>
+				<iframe src="http://maps.google.com/maps?f=q&t=m&z=15&ll=37.4219064,-122.0848126&output=embed" width="100%" height="185" frameborder="0" style="border:0"></iframe>
 				<span class="phone">+62811 2233 4455</span>
-				<span class="email"><a href="mailto:support@yourwebsite.com">support@yourwebsite.com</a></span>
+				<span class="email"><a href="mailto:info@familyparking.it">info@familyparking.it</a></span>
 				<span class="address">Wonorejo 02 Surabaya, East Java - Indonesia</span>
 			</div>
 			<div class="col-xs-12 col-sm-6">
@@ -72,7 +71,7 @@
 	<div class="row">
 		<header class="col-md-12">
 			<div class="logo">
-				<a href="#"><img src="images/logo2.png"></a>
+				<a href="#"><img width="100px" src="images/logo2.png"></a>
 				<p>Family Parking</p>
 				<h1>Where is your car? a sapello...</h1>
 			</div>
