--- a/Server/website/index.html
+++ b/Server/website/index.html
@@ -73,7 +73,7 @@
 			<div class="logo">
 				<a href="#"><img width="100px" src="images/logo2.png"></a>
 				<p>Family Parking</p>
-				<h1>Where is your car? a sapello...</h1>
+				<h1>Where is your car?</h1>
 			</div>
 		</header>
 	</div>
