Finalize web site

--- a/Server/website/index.html
+++ b/Server/website/index.html
@@ -19,21 +19,19 @@
 	<link rel="stylesheet" href="css/bg-color.css" type="text/css" media="screen">
 	<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,600' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Coming+Soon' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Exo' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Maven+Pro:400,700' rel='stylesheet' type='text/css'>
 	<!-- Favicons
 	================================================== -->
 	<link rel="shortcut icon" href="#">
 
 </head>
 <body>
-<div class="bg bg-back bg-opacity-8"></div>
+<!-- <div class="bg bg-back bg-opacity-8"></div> -->
 
 	<!-- Primary Page Layout
 	================================================== -->
-<div class="header">
-	<div class="container">
+<!--<div class="header">
+	 <div class="container">
 	<div class="header-content">
 		<div class="row">
 			<div class="col-md-12 text-center">
@@ -66,22 +64,31 @@
 </div>
 	<div class="open-header"><img src="images/open-header.png" alt=""></div>
 	<div class="close-header"><img src="images/close-header.png" alt=""></div>
-
+-->
 <div class="container">
 	<div class="row">
 		<header class="col-md-12">
 			<div class="logo">
-				<a href="#"><img width="100px" src="images/logo2.png"></a>
-				<p>Family Parking</p>
-				<h1>Where is your car?</h1>
-			</div>
+				<p> <img width="200px" src="images/logo.png"> Family Parking</p>
+            </div>
+            <hr size="100">
+			
 		</header>
 	</div>
-	<div class="row">
-		<header class="col-md-6">
+
+	<div class="row" >
+		<header class="col-md-8">
 			<div class="description">
-				<p>Family Parking is an Android App that will allow you to share you last park information with your parents. How many time did you posed time looking for where your sister parked your car? Since now you just have to open your app and you will immediately find your car! Amazing!</p>
+            	<h1>Where is your car?</h1>
+				<br>
+                <p>Family Parking is an Android App that will allow you to share you last park information with your parents. How many time did you posed time looking for where your sister parked your car? <br> <br>
+                Since now you just have to open your app and you will immediately find your car! Amazing!</p>
 			</div>
+		</header>
+        <header class="col-md-4"> 
+        <br>
+        	<img src="images/car.png"/> <br> <br>
+        	You can download the APK from here:<a href="http://www.familyparking.it/app" TARGET="_blank" > &nbsp; <img src="images/download.png"/></a>
 		</header>
 	</div>
 	<div class="row">
@@ -110,19 +117,19 @@
 	</div>
 	<div class="row">
 		<div class="col-md-6">
-			<ul class="socmed">
+			<!-- <ul class="socmed">
 				<li class="twitter"><a href="#">Twitter</a></li>
 				<li class="facebook"><a href="#">Facebook</a></li>
 				<li class="tumblr"><a href="#">Tumblr</a></li>
 				<li class="dribbble"><a href="#">Dribbble</a></li>
 				<li class="linkedin"><a href="#">LinkedIn</a></li>
 				<li class="rss"><a href="#">Rss</a></li>
-			</ul>
+			</ul> -->
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-md-6">
-			<div class="copy">Copyright &copy; 2014</div>
+			<div class="copy">Family Parking &copy; 2014</div>
 		</div>
 	</div>
 </div>
@@ -135,7 +142,7 @@
 	<script type="text/javascript" src="js/jquery.countdown.js" charset="utf-8"></script>
 	<script type="text/javascript" src="js/countdown.js" charset="utf-8"></script>
 	<script type="text/javascript" src="js/supersized.3.2.7.js" charset="utf-8"></script>
-	<script type="text/javascript" src="js/images.js" charset="utf-8"></script>
+	<!-- <script type="text/javascript" src="js/images.js" charset="utf-8"></script> -->
 
 	<!-- End Document
 	================================================== -->
