--- a/Server/website/index.html
+++ b/Server/website/index.html
@@ -71,7 +71,7 @@
 			<div class="logo">
 				<p> <img width="200px" src="images/logo.png"> Family Parking</p>
             </div>
-            <hr size="100">
+            <hr>
 			
 		</header>
 	</div>
@@ -88,7 +88,7 @@
         <header class="col-md-4"> 
         <br>
         	<img src="images/car.png"/> <br> <br>
-        	You can download the APK from here:<a href="http://www.familyparking.it/app" TARGET="_blank" > &nbsp; <img src="images/download.png"/></a>
+        	You can download the APK from here:<a href="http://www.familyparking.it/app/familyParking.apk" TARGET="_blank" > &nbsp; <img src="images/download.png"/></a>
 		</header>
 	</div>
 	<div class="row">
@@ -127,9 +127,11 @@
 			</ul> -->
 		</div>
 	</div>
+                <hr>
+
 	<div class="row">
 		<div class="col-md-6">
-			<div class="copy">Family Parking &copy; 2014</div>
+			<div class="copy">Family Parking &copy; 2014		|	 contact us: <a href="mailto:info@familyparking.it">info@familyparking.it</a></div>
 		</div>
 	</div>
 </div>
