Insert webpage howtouse

--- a/Server/website/howtouse.html
+++ b/Server/website/howtouse.html
@@ -26,45 +26,7 @@
 
 </head>
 <body>
-<!-- <div class="bg bg-back bg-opacity-8"></div> -->
 
-	<!-- Primary Page Layout
-	================================================== -->
-<!--<div class="header">
-	 <div class="container">
-	<div class="header-content">
-		<div class="row">
-			<div class="col-md-12 text-center">
-				<h1>Contact us</h1>
-			</div>
-			<div class="col-xs-12 col-sm-6 contact-details text-right">
-				<iframe src="http://maps.google.com/maps?f=q&t=m&z=15&ll=37.4219064,-122.0848126&output=embed" width="100%" height="185" frameborder="0" style="border:0"></iframe>
-				<span class="phone">+62811 2233 4455</span>
-				<span class="email"><a href="mailto:info@familyparking.it">info@familyparking.it</a></span>
-				<span class="address">Wonorejo 02 Surabaya, East Java - Indonesia</span>
-			</div>
-			<div class="col-xs-12 col-sm-6">
-                    <form action="#" class="contact_form">
-                        <fieldset>
-                            <div><label for="name">Name</label>
-                                <input type="text" name="name" /></div>
-                            <div><label for="email">Email</label>
-                                <input type="text" name="email"/></div>
-                            <div><label for="message">Message</label>
-                                <textarea name="message" id="" cols="20" rows="3"></textarea></div>
-                            <div><label></label>
-                            <input type="submit" name="submit" value="submit" class="button bg-yellow" />
-							</div>
-                        </fieldset>
-                    </form>
-			</div>
-		</div>
-	</div>
-	</div>
-</div>
-	<div class="open-header"><img src="images/open-header.png" alt=""></div>
-	<div class="close-header"><img src="images/close-header.png" alt=""></div>
--->
 <div class="container">
 	<div class="row">
 		<header class="col-md-12">
@@ -79,18 +41,15 @@
 	<div class="row" >
 		<header class="col-md-8">
 			<div class="description">
-            	<h1>Where is your car?</h1>
+            	<h1>How to use FamilyParking?</h1>
 				<br>
-                <p>Family Parking is an Android App that will allow you to share you last park information with your parents. How many time did you posed time looking for where your sister parked your car? <br> <br>
-                Since now you just have to open your app and you will immediately find your car! Amazing!<br> <br> If you want to know how to use FamilyParking click <a href="http://www.familyparking.it/howtouse">here</a>
-
-				</p>
+                <p> <br> <br> 1. <b>Register yourself </b> inserting your username and email. <br> <br> 
+				2 <b>Insert the code</b> that FamilyParking have sent to your email. Well you are registered! <br> <br> 
+				3 <b>Add new car or new group</b> push on + button and select New Car or New Group. <br> <br> 
+				4 <b>Save your car position</b>, you have to push on P button when you parked your car. <br> <br> 
+				To know where your car is parked you have only to open FamilyParking !<br> <br>
+                </p>
 			</div>
-		</header>
-        <header class="col-md-4"> 
-        <br>
-        	<img src="images/car.png"/> <br> <br>
-        	You can download the APK from here:<a href="http://www.familyparking.it/app/familyParking.apk" TARGET="_blank" > &nbsp; <img src="images/download.png"/></a>
 		</header>
 	</div>
 	<div class="row">
