Server update with ibeacon

--- a/Server/website/index.html
+++ b/Server/website/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="park family app android google workshop">
 	<meta name="author" content="Family Parking">
+<!--	<meta name="apple-itunes-app" content="app-id=556164350"> -->
 
 	<!-- Mobile Specific Metas
 	================================================== -->
@@ -81,8 +82,8 @@
 			<div class="description">
             	<h1>Where is your car?</h1>
 				<br>
-                <p>Family Parking is an Android App that will allow you to share you last park information with your parents. How many time did you posed time looking for where your sister parked your car? <br> <br>
-                Since now you just have to open your app and you will immediately find your car! Amazing!<br> <br> If you want to know how to use FamilyParking click <a href="http://www.familyparking.it/howtouse">here</a>
+                <p>Family Parking is an app that will allow you to share you last park information with your parents. How many time did you posed time looking for where your sister parked your car? <br> <br>
+                Since now you just have to open your app and you will immediately find your car! Amazing!<br> <br> If you want to know how to use and how work FamilyParking click <a href="http://www.familyparking.it/howtouse">here</a>
 
 				</p>
 			</div>
@@ -90,7 +91,7 @@
         <header class="col-md-4"> 
         <br>
         	<img src="images/car.png"/> <br> <br>
-        	You can download the APK from here:<a href="http://www.familyparking.it/app/familyParking.apk" TARGET="_blank" > &nbsp; <img src="images/download.png"/></a>
+        	You can download the APK from here:<a href="http://first-vision-798.appspot.com/app/familyParking.apk" TARGET="_blank" > &nbsp; <img src="images/download.png"/></a>
 		</header>
 	</div>
 	<div class="row">
@@ -120,6 +121,16 @@
 	<script type="text/javascript" src="js/jquery.countdown.js" charset="utf-8"></script>
 	<script type="text/javascript" src="js/countdown.js" charset="utf-8"></script>
 	<script type="text/javascript" src="js/supersized.3.2.7.js" charset="utf-8"></script>
+	
+
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	  ga('create', 'UA-58079755-1', 'auto');
+	  ga('send', 'pageview');
+	</script>
 	<!-- <script type="text/javascript" src="js/images.js" charset="utf-8"></script> -->
 
 	<!-- End Document
